envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: grpc-web-listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8087
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc-web-listener
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_web_service
                      domains:
                        - "*"
                      routes:
                        - name: grpc_web_route
                          match:
                            prefix: "/"
                          route:
                            cluster: mruv_api_placeholder_cluster
                            max_grpc_timeout: 5s
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: ".*"
                        allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        expose_headers: grpc-status,grpc-message,x-envoy-upstream-service-time
                        max_age: "1728000"
  clusters:
    - name: mruv_api_placeholder_cluster
      connect_timeout: 0.25s
      lb_policy: round_robin
      type: logical_dns
      http2_protocol_options: { }
      load_assignment:
        cluster_name: mruv_api_placeholder_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mruv-api-placeholder
                      port_value: 8085
